--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 ]
 requires-python = ">=3.11"
 dependencies = [
+    "chainlit>=2.2.1",
     "crewai>=0.102.0",
     "crewai-tools>=0.36.0",
 ]
